Fixing a few lint issues